Fixed some spacing issues on home page

--- a/src/static/stylesheets/components/_header.scss
+++ b/src/static/stylesheets/components/_header.scss
@@ -10,7 +10,7 @@ header {
   width: 30%;
 
   div {
-    margin-bottom: 0.5em;
+    margin-bottom: 1em;
   }
 
   @include large {
