--- a/src/static/stylesheets/components/_testimonial_carousel.scss
+++ b/src/static/stylesheets/components/_testimonial_carousel.scss
@@ -2,7 +2,7 @@
   text-align: center;
   font-size: 1.875rem;
   line-height: 30px;
-  margin-top: 4vh;
+  margin-top: 6vh;
   color: #6DBCDB;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
